--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>대전 맛집</title>
     <style>
       #map {
-        position: fixed;
-        bottom: 0;
-        left: 50%;
-        width: 60%;
-        transform: translateX(-50%);
-        height: 80%;
+      position: relative;
+      top: -126%;
+      left: 55%;
+      transform: translate(-50%);
+      height: 100%;
+      width: 1000px;
+      border: 1px solid black;
+      border-radius: 10px;
       }
     </style>
     <script
